--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -123,28 +123,28 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="img/ljh_img/ebichu1.png"
+                  src="img/ljh/ebichu1.png"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="img/ljh_img/ebichu2.jpg"
+                  src="img/ljh/ebichu2.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="img/ljh_img/ebichu3.jpg"
+                  src="img/ljh/ebichu3.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="img/ljh_img/ebichu4.gif"
+                  src="img/ljh/ebichu4.gif"
                   class="d-block w-100"
                   alt="..."
                 />
