--- a/Group_Page/shs.html
+++ b/Group_Page/shs.html
@@ -8,10 +8,15 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
-      />
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/shs.css"> 
-      <script src="js/shs.js"></script>
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/shs.css" />
+    <script src="js/shs.js"></script>
   </head>
   <body>
     <!-- Sidebar/menu -->
@@ -95,89 +100,72 @@
       id="myOverlay"
     ></div>
 
-      <!-- Services -->
-      
-      <section class="section-about">
-        <div class="cont-about">
-          <div class="slide-container">
+    <!-- Services -->
+
+    <section class="section-about">
+      <div class="cont-about">
+        <div class="slide-container"></div>
+        <div class="info-about">
+          <div class="w3-container" id="services" style="margin-top: 75px">
+            <h1 class="w3-xxxlarge w3-text-red" ic="name"><b>송하석</b></h1>
+            <hr style="width: 50px; border: 5px solid red" class="w3-round" />
           </div>
-          <div class="info-about">
-            <div class="w3-container" id="services" style="margin-top: 75px">
-              <h1 class="w3-xxxlarge w3-text-red" ic="name"><b>송하석</b></h1>
-              <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-              </div>
-            <div class="slide-images">
-              <img src="img/shs_img/shs.gif" alt="내 사진" class="img-fluid img-thumbnail"/>
-              
+          <div class="slide-images">
+            <img
+              src="img/shs/shs.gif"
+              alt="내 사진"
+              class="img-fluid img-thumbnail"
+            />
+          </div>
+          <dl class="txt-about">
+            <div>
+              <h4 class="display-font-weight self con">안녕하세요!</h4>
+              <h4 class="display-font-weight self con">
+                근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.
+              </h4>
+            </div>
+            <div>
+              <dt>이름</dt>
+              <dd>송하석</dd>
             </div>
             <dl class="txt-about">
-              <div>
-              <h4 class="display-font-weight self con">안녕하세요!</h4>
-              <h4 class="display-font-weight self con">근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.</h4>
-              </div>
+              <h4 class="display-font-weight self">
+                안녕하세요! 근면성실한 맞춤형 인재를 목표로 하고 있는
+                개발자입니다.
+              </h4>
               <div>
                 <dt>이름</dt>
                 <dd>송하석</dd>
               </div>
-              <dl class="txt-about">
-                <h4 class="display-font-weight self">
-                  안녕하세요! 근면성실한 맞춤형 인재를 목표로 하고 있는
-                  개발자입니다.
-                </h4>
-                <div>
-                  <dt>이름</dt>
-                  <dd>송하석</dd>
-                </div>
-                <div>
-                  <dt>생년월일</dt>
-                  <dd>95년 2월 8일</dd>
-                </div>
-                <div>
-                  <dt>거주지</dt>
-                  <dd>서울시 중랑구</dd>
-                </div>
-                <div>
-                  <dt>취미</dt>
-                  <dd>드라마 시청</dd>
-                </div>
-                <div>
-                  <dt>고민</dt>
-                  <dd>아침에 앉아서 대중교통 타고싶다ㅠㅠ</dd>
-                </div>
-              </dl>
-              <div class="btn-about">
-                <button class="btn btn-danger" type="button">
-                  <img src="src/img/icon-diary.png" alt="" />취미
-                </button>
-                <button class="btn btn-danger" type="button">
-                  <img src="src/img/icon-heart.png" alt="" />성격
-                </button>
+              <div>
+                <dt>생년월일</dt>
+                <dd>95년 2월 8일</dd>
               </div>
+              <div>
+                <dt>거주지</dt>
+                <dd>서울시 중랑구</dd>
+              </div>
+              <div>
+                <dt>취미</dt>
+                <dd>드라마 시청</dd>
+              </div>
+              <div>
+                <dt>고민</dt>
+                <dd>아침에 앉아서 대중교통 타고싶다ㅠㅠ</dd>
+              </div>
+            </dl>
+            <div class="btn-about">
+              <button class="btn btn-danger" type="button">
+                <img src="src/img/icon-diary.png" alt="" />취미
+              </button>
+              <button class="btn btn-danger" type="button">
+                <img src="src/img/icon-heart.png" alt="" />성격
+              </button>
             </div>
-          </div>
-        </section>
-        <!-- Designers -->
-        <div class="w3-container" id="designers" style="margin-top: 75px">
-          <h1 class="w3-xxxlarge w3-text-red"><b>박성환</b></h1>
-          <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-          <p>The best team in the world.</p>
-          <p>
-            We are lorem ipsum consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
-          </p>
-          <p><b>Our designers are thoughtfully chosen</b>:</p>
+          </dl>
         </div>
-      </section> 
-
-
+      </div>
+    </section>
     <script>
       // Script to open and close sidebar
       function w3_open() {
