feat(index) : 경로 추가, 사진 추가

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -44,13 +44,13 @@
       </div>
       <div class="w3-bar-block">
         <a
-          href="#"
+          href="index.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >홈</a
         >
         <a
-          href="project.html#"
+          href="project.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >개별프로젝트</a
