--- a/Group_Page/project.html
+++ b/Group_Page/project.html
@@ -78,13 +78,13 @@
       </div>
       <div class="w3-bar-block">
         <a
-          href="#"
+          href="index.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >홈</a
         >
         <a
-          href="#"
+          href="project.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >개별프로젝트</a
