--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -150,7 +150,7 @@
       </div>
       <div class="w3-bar-block">
         <a
-          href="#"
+          href="index.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >홈</a
