fix(ljh) : 이미지 패스 변경, 필요없는 css 주석

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -236,7 +236,7 @@
           <div class="col">
             <div class="card">
               <img
-                src="img/ljh_img/company_icon.png"
+                src="img/ljh/company_icon.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -249,7 +249,7 @@
           <div class="col">
             <div class="card">
               <img
-                src="img/ljh_img/health_icon.png"
+                src="img/ljh/health_icon.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -262,7 +262,7 @@
           <div class="col">
             <div class="card">
               <img
-                src="img/ljh_img/travle_icon.png"
+                src="img/ljh/travle_icon.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -274,11 +274,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img
-                src="img/ljh_img/meet_icon.png"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="img/ljh/meet_icon.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">사람들 많이 만나기</h5>
                 <p class="card-text">사람들 보고 싶어요</p>
