--- a/Group_Page/index.html
+++ b/Group_Page/index.html
@@ -4,6 +4,10 @@
     <title>W3.CSS Template</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+    />
   </head>
   <style>
     * {
@@ -14,32 +18,117 @@
     .container {
       width: 100vw;
       height: 100vh;
-      display: flex;
-      flex-wrap: wrap;
+      text-align: center;
       /* border: 1px solid black; */
+      background-color: #fff6f6;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
     }
-    .container > div {
-      width: 50%;
+    .first_line {
+      width: 80%;
       height: 50%;
-      border: 1px solid black;
+      display: flex;
+      justify-content: space-around;
+      padding: 16px;
     }
-    img {
+
+    .first_line .sub_container1 {
+      width: 55%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .img1 {
       width: 100%;
+    }
+
+    .first_line .sub_container2 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 40%;
+      height: 100%;
+    }
+
+    .arrow {
+      background-color: #ffaaaa;
+      margin-bottom: 16px;
+      height: 80px;
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+    .second_line {
+      width: 80%;
+      height: 50%;
+      display: flex;
+      justify-content: space-around;
+      padding: 16px;
+    }
+
+    .second_line .sub_container1 {
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      height: 100%;
+      justify-content: space-between;
+    }
+
+    .text-box {
+      font-size: 56px;
+      font-weight: bolder;
+      color: #ffc5c5;
+      height: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .second_line .sub_container2 {
+      width: 55%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .img-wrapper {
+      height: 70%;
+      overflow: hidden;
+    }
+
+    .img3 {
+      width: 100%;
+    }
+
+    .arro-icon {
+      position: absolute;
+      right: 24px;
     }
   </style>
   <body>
     <div class="container">
-      <div>
-        <img src="img/team/team_1.png" />
+      <div class="first_line">
+        <div class="sub_container1">
+          <img src="img/team/team_1.png" , alt="..." class="img1" />
+        </div>
+        <div class="sub_container2">
+          <div class="arrow">
+            <i class="fas fa-arrow-right arro-icon" style="color: #ffffff"></i>
+          </div>
+          <img src="img/team/team_2.png" , alt="..." class="img2" />
+        </div>
       </div>
-      <div>
-        <img src="img/team/team_2.png" />
-      </div>
-      <div>
-        <img src="img/team/team_3.png" />
-      </div>
-      <div>
-        <img src="img/team/team_4.png" />
+      <div class="second_line">
+        <div class="sub_container1">
+          <div class="img-wrapper">
+            <img src="img/team/team_3.png" , alt="..." class="img3" />
+          </div>
+          <div class="text-box">손&nbsp&nbsp송&nbsp&nbsp박&nbsp&nbsp이</div>
+        </div>
+        <div class="sub_container2">
+          <img src="img/team/team_4.png" , alt="..." class="img4" />
+        </div>
       </div>
     </div>
   </body>
