fix(main) : 클래스 이름 변경
- project.html -> main.html

--- a/Group_Page/index.html
+++ b/Group_Page/index.html
@@ -139,7 +139,7 @@
 
     <script>
       document.getElementById("arrow").onclick = () => {
-        location.href = "project.html";
+        location.href = "main.html";
       };
     </script>
   </body>
