--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -50,7 +50,7 @@
           >홈</a
         >
         <a
-          href="project.html"
+          href="main.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
           >개별프로젝트</a
