fix(all) : 개별 프로젝트 -> 메인 변경

--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -87,7 +87,7 @@
           href="main.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-hover-white"
-          >개별프로젝트</a
+          >메인</a
         >
         <a
           href="sma.html"
@@ -142,7 +142,7 @@
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
-        <h1 class="w3-xxxlarge w3-text-red"><b>개별 프로젝트</b></h1>
+        <h1 class="w3-xxxlarge w3-text-red"><b>메인</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
       <div class="team1">
