--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="css/ljh.css" />
     <style>
       body,
       h1,
@@ -21,6 +33,10 @@
       body {
         font-size: 16px;
       }
+      #titleName {
+        color: white;
+        font-size: large;
+      }
       .w3-half img {
         margin-bottom: -6px;
         margin-top: 16px;
@@ -30,29 +46,30 @@
       .w3-half img:hover {
         opacity: 1;
       }
-
-      .team1 {
-        width: 100%;
-        height: 100%;
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        /* 세로 정렬 content-box */
-        /* align-content: space-evenly; */
-        /* 가로 정렬 content-box */
-        justify-content: space-evenly;
-        /* 세로 정렬 postit */
-        align-items: start;
-        /* 가로 정렬 postit */
-        justify-items: center;
+      .infoContainer {
+        padding: 5% 10% 5% 10%;
       }
-
-      .team1 > div {
-        height: 400px;
+      .infoTitle {
+        margin: 0px 0px 50px 0px;
       }
-      #titleName {
-        color: white;
-        font-size: large;
+      .card-body {
+        padding: 20px;
+        text-align: center;
+      }
+      .card-title {
+        color: red;
+        font-weight: 600;
+      }
+      .card {
+        padding: 48px;
+        border-radius: 8px;
+        border: none;
+      }
+      .card > img {
+        width: 50%;
+        height: 50%;
+        margin: auto;
+        margin-bottom: 24px;
       }
     </style>
   </head>
@@ -145,14 +162,48 @@
         <h1 class="w3-xxxlarge w3-text-red"><b>메인</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
-      <div class="team1">
-        <div class="sma">민아</div>
-        <div class="shs">하석</div>
-        <div class="psh">성환</div>
-        <div class="ljh">진호</div>
+      <!-- Goal start -->
+      <div class="infoContainer">
+        <div class="infoTitle">
+          <h4 id="about">더존 5기 1조</h4>
+          <h2 id="introduce">손송박이 멤버's</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="img/minaci/minaci.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">손민아</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/shs/shs.gif" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">송하석</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/psh/psh.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">박성환</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/ljh/ljh.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">이진호</h5>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
     <script>
       // Script to open and close sidebar
       function w3_open() {
