feat(all) : 메인컬러 변경
- red -> #ffaaaa

--- a/Group_Page/psh.html
+++ b/Group_Page/psh.html
@@ -32,7 +32,7 @@
       }
 
       #about {
-        color: red;
+        color: #ffaaaa;
       }
 
       body {
@@ -51,7 +51,7 @@
       }
 
       .btn.myInfo {
-        background-color: red;
+        background-color: #ffaaaa;
         color: white;
         font-weight: 600;
       }
@@ -75,7 +75,7 @@
 
       span,
       hr {
-        color: red;
+        color: #ffaaaa;
       }
 
       #slide {
@@ -116,6 +116,11 @@
       #titleName {
         color: white;
         font-size: large;
+      }
+      .w3-red,
+      .w3-hover-red:hover {
+        color: #fff !important;
+        background-color: #ffaaaa !important;
       }
     </style>
   </head>
@@ -210,7 +215,9 @@
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
-        <h1 class="w3-xxxlarge w3-text-red"><b>박성환</b></h1>
+        <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
+          <b>박성환</b>
+        </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
       <br />
