--- a/Group_Page/shs.html
+++ b/Group_Page/shs.html
@@ -107,8 +107,13 @@
         <div class="slide-container"></div>
         <div class="info-about">
           <div class="w3-container" id="services" style="margin-top: 75px">
-            <h1 class="w3-xxxlarge w3-text-red" ic="name"><b>송하석</b></h1>
-            <hr style="width: 50px; border: 5px solid red" class="w3-round" />
+            <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa" ic="name">
+              <b>송하석</b>
+            </h1>
+            <hr
+              style="width: 50px; border: 5px solid #ffaaaa"
+              class="w3-round"
+            />
           </div>
           <div class="slide-images">
             <img
