--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -57,7 +57,7 @@
         text-align: center;
       }
       .card-title {
-        color: red;
+        color: #ffaaaa;
         font-weight: 600;
       }
       .card {
@@ -70,6 +70,11 @@
         height: 50%;
         margin: auto;
         margin-bottom: 24px;
+      }
+      .w3-red,
+      .w3-hover-red:hover {
+        color: #fff !important;
+        background-color: #ffaaaa !important;
       }
     </style>
   </head>
@@ -159,7 +164,7 @@
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
-        <h1 class="w3-xxxlarge w3-text-red"><b>메인</b></h1>
+        <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa"><b>메인</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
       <!-- Goal start -->
