--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -68,7 +68,7 @@
         /* border: 1px solid black; */
         text-align: center;
         font-size: 3em;
-        color: red;
+        color: #ffaaaa;
       }
 
       #about {
@@ -124,6 +124,12 @@
         font-size: 24px;
         margin: 50px 0px 50px 0px;
         font-weight: 600;
+      }
+
+      .w3-red,
+      .w3-hover-red:hover {
+        color: #fff !important;
+        background-color: #ffaaaa !important;
       }
     </style>
   </head>
@@ -214,7 +220,9 @@
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
-        <h1 class="w3-xxxlarge w3-text-red"><b>손민아</b></h1>
+        <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
+          <b>손민아</b>
+        </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
 
