feat(all) : 개인페이지 링크 제작, css
- a태그 호버, 색상 변경

--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -131,6 +131,14 @@
         color: #fff !important;
         background-color: #ffaaaa !important;
       }
+
+      a {
+        color: #ffaaaa;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #ffaaaa;
+      }
     </style>
   </head>
 
@@ -221,7 +229,7 @@
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
         <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
-          <b>손민아</b>
+          <a href="#"><b>손민아</b></a>
         </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
