--- a/Group_Page/psh.html
+++ b/Group_Page/psh.html
@@ -122,6 +122,13 @@
         color: #fff !important;
         background-color: #ffaaaa !important;
       }
+      a {
+        color: #ffaaaa;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #ffaaaa;
+      }
     </style>
   </head>
 
@@ -216,7 +223,7 @@
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
         <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
-          <b>박성환</b>
+          <a href="#"><b>박성환</b></a>
         </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
