--- a/Group_Page/shs.html
+++ b/Group_Page/shs.html
@@ -108,7 +108,7 @@
         <div class="info-about">
           <div class="w3-container" id="services" style="margin-top: 75px">
             <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa" ic="name">
-              <b>송하석</b>
+              <a href="#"><b>송하석</b></a>
             </h1>
             <hr
               style="width: 50px; border: 5px solid #ffaaaa"
