--- a/Group_Page/index.html
+++ b/Group_Page/index.html
@@ -19,17 +19,18 @@
       width: 100vw;
       height: 100vh;
       text-align: center;
-      /* border: 1px solid black; */
       background-color: #fff6f6;
       display: flex;
       flex-direction: column;
       align-items: center;
       position: relative;
     }
+
     .first_line {
       width: 80%;
       height: 50%;
       display: flex;
+      flex-direction: row-reverse;
       justify-content: space-around;
       padding: 16px;
     }
@@ -69,6 +70,7 @@
       width: 80%;
       height: 50%;
       display: flex;
+      flex-direction: row-reverse;
       justify-content: space-around;
       padding: 16px;
     }
@@ -110,29 +112,76 @@
       position: absolute;
       right: 24px;
     }
+
+    .img4 {
+      width: 100%;
+    }
+
+    @media (max-width: 1000px) {
+      .container {
+        height: auto;
+      }
+
+      .first_line {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .first_line .sub_container1 {
+        width: 80%;
+      }
+
+      .first_line .sub_container2 {
+        flex-direction: column;
+        justify-content: space-between;
+        width: 80%;
+        margin-bottom: 16px;
+      }
+
+      .second_line {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .second_line .sub_container1 {
+        width: 80%;
+      }
+
+      .second_line .sub_container2 {
+        width: 80%;
+        height: auto;
+        margin-bottom: 16px;
+      }
+
+      .text-box {
+        font-size: 8vw;
+      }
+    }
   </style>
   <body>
     <div class="container">
       <div class="first_line">
-        <div class="sub_container1">
-          <img src="img/team/team_1.png" , alt="..." class="img1" />
-        </div>
         <div class="sub_container2">
           <div class="arrow" id="arrow">
             <i class="fas fa-arrow-right arro-icon" style="color: #ffffff"></i>
           </div>
           <img src="img/team/team_2.png" , alt="..." class="img2" />
         </div>
+        <div class="sub_container1">
+          <img src="img/team/team_1.png" , alt="..." class="img1" />
+        </div>
       </div>
       <div class="second_line">
+        <div class="sub_container2">
+          <img src="img/team/team_4.png" , alt="..." class="img4" />
+        </div>
         <div class="sub_container1">
           <div class="img-wrapper">
             <img src="img/team/team_3.png" , alt="..." class="img3" />
           </div>
           <div class="text-box">손&nbsp&nbsp송&nbsp&nbsp박&nbsp&nbsp이</div>
-        </div>
-        <div class="sub_container2">
-          <img src="img/team/team_4.png" , alt="..." class="img4" />
         </div>
       </div>
     </div>
