--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -14,132 +14,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/sma.css" />
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      body,
-      h1,
-      h2,
-      h3,
-      h4,
-      h5 {
-        font-family: "Poppins", sans-serif;
-      }
-
-      p {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-size: 16px;
-      }
-
-      .w3-half img {
-        margin-bottom: -6px;
-        margin-top: 16px;
-        opacity: 0.8;
-        cursor: pointer;
-      }
-
-      .w3-half img:hover {
-        opacity: 1;
-      }
-
-      #titleName {
-        color: white;
-        font-size: large;
-      }
-
-      .header {
-        text-align: center;
-        font-size: 4em;
-        margin: 56px 0px 160px 0px;
-      }
-      .content-box {
-        width: 100%;
-        /* border: 1px solid black; */
-      }
-
-      .about {
-        width: 100%;
-        /* border: 1px solid black; */
-        text-align: center;
-        font-size: 3em;
-        color: #ffaaaa;
-      }
-
-      #about {
-        margin: 50px 0px 50px 0px;
-      }
-
-      .info {
-        display: flex;
-        justify-content: space-evenly;
-      }
-      .profile {
-        /* border: 1px solid black; */
-        width: 25%;
-        text-align: center;
-        padding: 0 24px 0 24px;
-      }
-
-      .career {
-        width: 25%;
-      }
-      .career p {
-        margin-bottom: 8px;
-      }
-      .skill {
-        /* border: 1px solid black; */
-        height: 50%;
-        text-align: center;
-      }
-
-      .cerification {
-        /* border: 1px solid black; */
-        height: 50%;
-        text-align: center;
-      }
-      .goal {
-        /* border: 1px solid black; */
-        width: 25%;
-        text-align: center;
-      }
-      .photo > img {
-        width: 100%;
-        margin-bottom: 16px;
-      }
-
-      .infotitle {
-        font-size: 24px;
-        font-weight: 600;
-        margin-bottom: 24px;
-      }
-
-      .photo {
-        text-align: center;
-        font-size: 24px;
-        margin: 50px 0px 50px 0px;
-        font-weight: 600;
-      }
-
-      .w3-red,
-      .w3-hover-red:hover {
-        color: #fff !important;
-        background-color: #ffaaaa !important;
-      }
-
-      a {
-        color: #ffaaaa;
-        text-decoration: none;
-      }
-      a:hover {
-        color: #ffaaaa;
-      }
-    </style>
   </head>
 
   <body>
@@ -212,7 +89,7 @@
         onclick="w3_open()"
         >☰</a
       >
-      <span id="titleName"><b>손송박이</b></span>
+      <span>Company Name</span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
@@ -274,10 +151,10 @@
               <p>컴퓨터활용 1급</p>
             </div>
           </div>
+
           <div class="goal">
             <p class="infotitle">Goal</p>
             <p>📌열심히 배우기</p>
-
             <p>📌더! 존! 취업하기</p>
             <p>📌건강 챙기기</p>
           </div>
@@ -320,7 +197,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">담비</h5>
+              <h5 class="card-title">Dambi</h5>
               <p class="card-text">2살된 내 동생.</p>
             </div>
           </div>
@@ -333,7 +210,7 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">환상의 나라</h5>
+              <h5 class="card-title">Everland</h5>
               <p class="card-text">아마존 노래 부를 수 있어요.</p>
             </div>
           </div>
